--- a/relatar_atend.html
+++ b/relatar_atend.html
@@ -85,27 +85,25 @@
     </select>
 
     <label for="dadosCliente">Cole aqui as informações do cliente:</label>
-    <textarea id="dadosCliente" rows="5" placeholder="Exemplo WhatsApp:
-Cole aqui as infos do fluctus, exemplo:
+    <textarea id="dadosCliente" rows="12" placeholder="WhatsApp exemplo:
 Nome do Cliente
-55 (55) 55555-5555
-00 (00) 00000-0000
-Protocolo: 98545678987654567
-Data e hora
+55 (48) 8500-5836
+Protocolo: 202508141755183517
+14/08/2025 12:12
 
-Exemplo telefone/presencial. Coloque as infos nessa ordem:
-Nome do cliente
-Número do cliente ou ramal de contato
-Data e hora"></textarea>
+Telefone/presencial exemplo:
+Maria
+(55) 99999-9999/ramal
+14/08/2025 12:12"></textarea>
 
     <label for="solicitacao">SOLICITAÇÃO DO CLIENTE:</label>
-    <textarea id="solicitacao" rows="3"></textarea>
+    <textarea id="solicitacao" rows="5"></textarea>
 
     <label for="verificacoes">VERIFICAÇÕES:</label>
-    <textarea id="verificacoes" rows="3"></textarea>
+    <textarea id="verificacoes" rows="5"></textarea>
 
     <label for="acoes">AÇÕES REALIZADAS / ORIENTAÇÕES:</label>
-    <textarea id="acoes" rows="3"></textarea>
+    <textarea id="acoes" rows="5"></textarea>
 
     <div>
         <button onclick="gerarRelatorio()">Gerar Relatório</button>
@@ -122,22 +120,28 @@ Data e hora"></textarea>
 <script>
 function formatarCabecalho(meio, texto) {
     const linhas = texto.trim().split("\n").map(l => l.trim()).filter(l => l);
-    const agora = new Date();
-    const dataHora = agora.toLocaleDateString('pt-BR') + " " +
-                     agora.toLocaleTimeString('pt-BR', {hour: '2-digit', minute:'2-digit'});
 
     if (meio === "whatsapp" && linhas.length >= 4) {
         const nome = linhas[0];
         const numeroCliente = linhas[1];
         const protocolo = linhas.find(l => l.startsWith("Protocolo:")) || "";
+        const dataHora = linhas[linhas.length - 1]; // última linha = data/hora manual
         return `${nome}  // ${numeroCliente} via fluctus  // ${protocolo} // ${dataHora}`;
     }
-    if (meio === "telefone" && linhas.length >= 2) {
-        return `${linhas[0]}  // ${linhas[1]} via telefone  // ${dataHora}`;
+
+    if (meio === "telefone" && linhas.length >= 3) {
+        const nome = linhas[0];
+        const numeroCliente = linhas[1];
+        const dataHora = linhas[2]; // terceira linha = data/hora manual
+        return `${nome}  // ${numeroCliente} via telefone  // ${dataHora}`;
     }
-    if (meio === "presencial" && linhas.length >= 1) {
-        return `${linhas[0]}  // atendimento presencial  // ${dataHora}`;
+
+    if (meio === "presencial" && linhas.length >= 2) {
+        const nome = linhas[0];
+        const dataHora = linhas[1]; // segunda linha = data/hora manual
+        return `${nome}  // atendimento presencial  // ${dataHora}`;
     }
+
     return texto;
 }
 
