--- a/relatar_atend.html
+++ b/relatar_atend.html
@@ -85,14 +85,15 @@
     </select>
 
     <label for="dadosCliente">Cole aqui as informações do cliente:</label>
-    <textarea id="dadosCliente" rows="12" placeholder="WhatsApp exemplo:
+    <textarea id="dadosCliente" rows="12" placeholder="WhatsApp exemplo (só copiar info do fluctus e colar adicionando a data):
 Nome do Cliente
-55 (48) 8500-5836
-Protocolo: 202508141755183517
-14/08/2025 12:12
+55 (55) 5555-5555
+55 (48) 9136-7400
+Protocolo: 123456789101112131
+01/01/2025 08:00
 
 Telefone/presencial exemplo:
-Maria
+Nome do cliente
 (55) 99999-9999/ramal
 14/08/2025 12:12"></textarea>
 
